# duckdb-oracle

./: .gitmodules  CMakeLists.txt  README.md  design.md  extension_config.cmake
.github/workflows/: Maindistributionpipeline.yml
src/: oracle_catalog.cpp  oracle_connection.cpp  oracle_extension.cpp  oracle_optimizer.cpp  oracle_scan.cpp  oracle_schema_entry.cpp  oracle_storage.cpp  oracle_table_entry.cpp  oracle_type_mapping.cpp  oracle_utils.cpp
src/include/: oracle_catalog.hpp  oracle_connection.hpp  oracle_optimizer.hpp  oracle_scan.hpp  oracle_schema_entry.hpp  oracle_storage.hpp  oracle_table_entry.hpp  oracle_type_mapping.hpp  oracle_utils.hpp
test/sql/: oracle_attach.test  oracle_pushdown.test  oracle_types.test  oracle_write.test
